--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~9.0.5",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
+    "mediaelement": "^4.2.16",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.3",
     "rxjs": "~6.5.4",
