--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
         npm run build --prod
         
     - name: List output files
-      run: ls
+      run: ls /home/runner/work/it-developern-ng/it-developern-ng/dist/it-developern-ng
       
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
